--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                 <div class="social-icons">
                     <a href="https://www.facebook.com/icekingcandinato"><i class="fa-brands fa-facebook"></i></a>
                     <a href="https://twitter.com/i/flow/login"><i class="fa-brands fa-twitter-square"></i></a>
-                    <a href="https://www.instagram.com/icekingcandinato"><i class="fa-brands fa-instagram"></i></a>
+                    <a href="https://www.instagram.com/"><i class="fa-brands fa-instagram"></i></a>
                     <a href="https://ph.linkedin.com/"><i class="fa-brands fa-linkedin"></i></a>
                 </div>
                 <a href="Dummy/Jan Anro Candinato.pdf" download class="btn btn2">Download CV</a>
