--- a/index.html
+++ b/index.html
@@ -105,7 +105,8 @@
                                 <img src="Dummy/work-1.png" alt="">
                                 <div class="layer">
                                     <h3>Book Reader</h3>
-                                    <p>ReadArea is a great way to stay up to date on new books without missing out on the many centuries worth of books already at your fingertips. The site is comfortable and easy to use, and their selection includes a wide range of languages to choose from.</p>
+                                    <p>ReadArea is a great way to stay up to date on new books without missing out on the many centuries worth of books already at your fingertips.</p>
+                                    <br><p><strong>Stacks used</strong>: React App that fetches API from OpenLibrary</p></br>
                                     <a href="https://trylibrary.netlify.app/" target="_blank"><i class="fa-solid fa-up-right-from-square"></i></a>
                                 </div>
                             </div>
@@ -115,6 +116,7 @@
                                     <h3>Yoga</h3>
                                     <p>Yoga to Release Stress
                                         Yoga is a way of life, rather than a chore. Counteract the stresses of modern life by becoming more mindful and compassionate.</p>
+                                        <br><p><strong>Stacks used</strong>: REACT & TailwindCSS</p></br>
                                         <a href="https://tryyoga.netlify.app/" target="_blank"><i class="fa-solid fa-up-right-from-square"></i></a>
                                 </div>
                             </div>
@@ -123,6 +125,7 @@
                                 <div class="layer">
                                     <h3>Data Bank</h3>
                                     <p>Save your data storage here. Data Warehouse is a data storage area that has been tested for security, so you can store your data here safely but not be afraid of being stolen by others.</p>
+                                    <br><p><strong>Stacks used</strong>: REACT & TailwindCSS</p></br>
                                     <a href="https://trydatabank.netlify.app/" target="_blank"><i class="fa-solid fa-up-right-from-square"></i></a>
                                 </div>
                             </div>
@@ -131,6 +134,7 @@
                                 <div class="layer">
                                     <h3>My Bags Store</h3>
                                     <p>Torem ipsum dolor sit amet, consectetur adipisicing elitsed do eiusmo tempor incididunt ut labore et dolore magna</p>
+                                    <br><p><strong>Stacks used</strong>: React App Material UI</p></br>
                                     <a href="https://trystore.netlify.app/" target="_blank"><i class="fa-solid fa-up-right-from-square"></i></a>
                                 </div>
                             </div>
