--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                                 <div class="layer">
                                     <h3>My Bags Store</h3>
                                     <p>Torem ipsum dolor sit amet, consectetur adipisicing elitsed do eiusmo tempor incididunt ut labore et dolore magna</p>
-                                    <br><p><strong>Stacks used</strong>: React App Material UI</p></br>
+                                    <br><p><strong>Stacks used</strong>: React & Material UI</p></br>
                                     <a href="https://trystore.netlify.app/" target="_blank"><i class="fa-solid fa-up-right-from-square"></i></a>
                                 </div>
                             </div>
