--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                                 <img src="Dummy/work-4.png" alt="">
                                 <div class="layer">
                                     <h3>My Bags Store</h3>
-                                    <p>Torem ipsum dolor sit amet, consectetur adipisicing elitsed do eiusmo tempor incididunt ut labore et dolore magna</p>
+                                    <p>Choose exquisite pieces from the vast collection of lovely branded handbags high quality on My Bags.</p>
                                     <br><p><strong>Stacks used</strong>: React & Material UI</p></br>
                                     <a href="https://trystore.netlify.app/" target="_blank"><i class="fa-solid fa-up-right-from-square"></i></a>
                                 </div>
