--- a/index.html
+++ b/index.html
@@ -121,10 +121,10 @@
                                 </div>
                             </div>
                             <div class="work">
-                                <img src="Dummy/work-4.png" alt="">
+                                <img src="Dummy/work-4.png" alt="/images/work-4">
                                 <div class="layer">
                                     <h3>My Bags Store</h3>
-                                    <p>Choose exquisite pieces from the vast collection of lovely branded handbags high quality on My Bags.</p>
+                                    <p>Choose exquisite pieces from the vast collection of lovely branded handbags high quality on My Bags</p>
                                     <br><p><strong>Stacks used</strong>: React & Material UI</p></br>
                                     <a href="https://trystore.netlify.app/" target="_blank"><i class="fa-solid fa-up-right-from-square"></i></a>
                                 </div>
