--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                                 </div>
                             </div>
                             <div class="work">
-                                <img src="Dummy/work-4.png" alt="/images/work-4">
+                                <img src="Dummy/work-4.PNG" alt="/images/work-4.PNG">
                                 <div class="layer">
                                     <h3>My Bags Store</h3>
                                     <p>Choose exquisite pieces from the vast collection of lovely branded handbags high quality on My Bags</p>
@@ -156,7 +156,7 @@
                 <div class="social-icons">
                     <a href="https://www.facebook.com/icekingcandinato"><i class="fa-brands fa-facebook"></i></a>
                     <a href="https://twitter.com/i/flow/login"><i class="fa-brands fa-twitter-square"></i></a>
-                    <a href="https://www.instagram.com/"><i class="fa-brands fa-instagram"></i></a>
+                    <a href="https://www.instagram.com/icekingcandinato"><i class="fa-brands fa-instagram"></i></a>
                     <a href="https://ph.linkedin.com/"><i class="fa-brands fa-linkedin"></i></a>
                 </div>
                 <a href="Dummy/Jan Anro Candinato.pdf" download class="btn btn2">Download CV</a>
