--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                         <i class="fa-solid fa-bars" onclick="openmenu()"></i>
                     </nav>
                     <div class="header-text">
-                        <p>UI/UX Designer</p>
+                        <p>Web Developer</p>
                         <h1>I'm <span>Jan C</span><br> a <span>Front-End</span> Developer</h1>
                     </div>
                 </div>
